style: 전역 스타일관리

--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,10 @@ code {
     monospace;
 }
 
-@font-face {
+/* @font-face {
   font-family: "YClover-Bold";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/YClover-Bold.woff2")
     format("woff2");
   font-weight: 700;
   font-style: normal;
-}
+} */
