--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 * {
-  font-family: "YClover-Bold";
+  font-family: "YClover-Bold", "YClover-regular", "Otomanopee One";
 }
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "YClover-regular",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -16,10 +16,21 @@ code {
     monospace;
 }
 
-/* @font-face {
+@font-face {
   font-family: "YClover-Bold";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/YClover-Bold.woff2")
     format("woff2");
   font-weight: 700;
   font-style: normal;
-} */
+}
+
+@font-face {
+  font-family: "YClover-regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/YClover-Regular.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
+
